--- a/FitnessOsnova_Kam_Dav/App.config
+++ b/FitnessOsnova_Kam_Dav/App.config
@@ -9,6 +9,7 @@
   </startup>
   <connectionStrings>
     <add name="FitnessClub_Kam_DavEntities" connectionString="metadata=res://*/DbModel.Model1.csdl|res://*/DbModel.Model1.ssdl|res://*/DbModel.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KAMALOVR\SQLEXPRESS;initial catalog=FitnessClub_Kam_Dav;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="FitnessClub_Kam_DavEntities1" connectionString="metadata=res://*/DbModel.Model1.csdl|res://*/DbModel.Model1.ssdl|res://*/DbModel.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KAMALOVR\SQLEXPRESS;initial catalog=FitnessClub_Kam_Dav;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
