--- a/FitnessOsnova_Kam_Dav/FitnessOsnova_Kam_Dav.csproj
+++ b/FitnessOsnova_Kam_Dav/FitnessOsnova_Kam_Dav.csproj
@@ -82,6 +82,7 @@
     <Compile Include="DbModel\Clients.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="DbModel\ConnectionClass.cs" />
     <Compile Include="DbModel\Feedback.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
